# h2s-rs

./: Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: cargo-publish.yml  check.yml  ci.yml  create-release-pr.yml  open-release-pr.yml  release.yml
core/: Cargo.toml
core/src/: _macro_utils.rs  adjuster.rs  display.rs  element_selector.rs  error.rs  extraction_method.rs  field_value.rs  from_html.rs  from_text.rs  functional.rs  functor.rs  html.rs  html_backend.rs  impls.rs  lib.rs  macro_utils.rs  mapper.rs  never.rs  parseable.rs  text_extractor.rs  transformable.rs  transformer.rs  traversable.rs  traversable_with_context.rs  types.rs  util.rs  utils.rs
core/src/backend/: mod.rs  scraper.rs
core/src/impls/: adjuster.rs  default_arg.rs  display.rs  from_html.rs  from_text.rs  html_backend.rs  mod.rs  text_extractor.rs
core/tests/: from_html.rs
examples/: basic.rs  comprehensive.rs  custom_extractor.rs  custom_field_value.rs  custom_type.rs  error.rs  explicit_extractor.rs  from_html_custom.rs  from_text_custom.rs  mini_test.rs  simple-expand.rs  simple.rs
macro/: Cargo.toml
macro/src/: lib.rs
scripts/: before-commit.sh  cargo-publish.sh  check-and-fix.sh
src/: lib.rs
src/backend/: mod.rs  scraper.rs
tests/: derive_macro.rs  skeptic.rs  test.rs
