[package]
name = "h2s"
description = "A declarative HTML parser, which works like a deserializer from HTML to struct"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

categories = ["parsing"]
keywords = ["html", "dom", "parser", "scraper", "parsing", "scraping"]

[workspace]
members = ["macro", "core"]

[workspace.package]
version = "0.1.5"
authors = ["Naoto Ikeno <ikenox@gmail.com>"]
repository = "https://github.com/ikenox/h2s-rs"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
h2s_core = { path = "core" }
h2s_macro = { path = "macro" }

itertools = "0.10.3"
scraper = { version = "0.16.0", optional = true }

[features]
default = ["backend-scraper"]
backend-scraper = ["dep:scraper"]

