[package]
name = "h2s"
description = "A declarative HTML parser, which works like a deserializer from HTML to struct"
version = "0.18.0"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

categories = ["parsing"]
keywords = ["html", "dom", "parser", "parsing", "scraping"]

[workspace]
members = ["macro", "core"]

[workspace.package]
authors = ["Naoto Ikeno <ikenox@gmail.com>"]
repository = "https://github.com/ikenox/h2s-rs"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[workspace.dependencies]
scraper = "0.16.0"

[dependencies]
h2s_core = { path = "core", version = "0.18.0" }
h2s_macro = { path = "macro", version = "0.18.0" }

itertools = "0.10.5"
scraper = { workspace = true, optional = true }

[features]
default = ["backend-scraper"]
backend-scraper = ["dep:scraper"]

