[package]
name = "h2s_core"
description = "A declarative HTML parser library."
version = "0.1.0"
authors = ["Naoto Ikeno <ikenox@gmail.com>"]
repository = "https://github.com/ikenox/h2s-rs"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
scraper = { version = "0.13.0", optional = true }

[dev-dependencies]
maplit = "1.0.2"

[features]
default = ["backend-scraper"]
backend-scraper = ["dep:scraper"]
