[package]
name = "h2s_core"
description = "A core part of h2s"
version = "0.1.3"
authors = ["Naoto Ikeno <ikenox@gmail.com>"]
repository = "https://github.com/ikenox/h2s-rs"
license = "MIT"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
maplit = "1.0.2"

