[package]
name = "h2s_macro"
description = "A macro part for h2s"
version = "0.1.2"
authors = ["Naoto Ikeno <ikenox@gmail.com>"]
repository = "https://github.com/ikenox/h2s-rs"
license = "MIT"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.18"
syn = "1.0.92"
darling = "0.14.1"
proc-macro2 = "1.0.37"
scraper = "0.13.0"
h2s_core = { version = "=0.1.1", path = "../core" }

[lib]
proc-macro = true
