[package]
name = "h2s_macro"
description = "A macro part of h2s"
version = "0.1.6"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.18"
syn = "1.0.92"
darling = "0.14.1"
proc-macro2 = "1.0.37"
scraper = { workspace = true } # TODO remove this dependency
h2s_core = { path = "../core", version = "0.1.6" }

[lib]
proc-macro = true
