[package]
name = "h2s_macro"
description = "A macro part of h2s"
version = "0.17.0"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = "2.0.15"
darling = "0.20.0"
proc-macro2 = "1.0.56"
scraper = { workspace = true } # TODO remove this dependency
h2s_core = { path = "../core", version = "0.17.0" }

[lib]
proc-macro = true
